# EU_AI_ACT_MCP

./: .env.example  .gitattributes  ARCHITECTURE_DIAGRAM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FIXED_RESOURCE_ACCESS.md  MIGRATION_GUIDE.md  PHASE2_SUMMARY.md  PLUGIN_ARCHITECTURE.md  QUICKSTART_V2.md  README.Docker.md  README.md  README_V2.md  REFACTORING_SUMMARY.md  TEST_INSTRUCTIONS.md  __init__.py  bug_report.md  claude_desktop_config_new.json  deepfake_labels.json  eu_ai_act_mcp_server.py  example_client.py  example_proxy_usage.py  feature_request.md  http_eu_ai_act_mcp_server.py  main.py  mcp_proxy.py  pull_request_template.md  pyproject.toml  requirements.txt  server.py  server_v2.py  setup.py  setup_mcp.sh  standalone_server.py  stdio_eu_ai_act_mcp_server.py  test_agent.py  test_all_tools.py  test_article50_rules.py  test_deepfake_labels.py  (+12 more)
EU_AI_ACT_MCP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crewai/eu_ai_act_crew/: README.md  list_models.py  pyproject.toml
crewai/eu_ai_act_crew/src/eu_ai_act_crew/: crew.py  main.py
crewai/eu_ai_act_crew/src/eu_ai_act_crew/config/: agents.yaml  tasks.yaml
plugins/: __init__.py  base.py  deepfake_plugin.py  loader.py  risk_classification_plugin.py  role_determination_plugin.py  security_plugin.py  transparency_plugin.py  watermarking_plugin.py
resources/: article50_rules.json  deepfake_labels.json  disclosure_templates.json
tests/: SONNYLABS_TESTING_GUIDE.md  test_all_tools.py  test_article50_rules.py  test_label_image_deepfake.py  test_resource_1.py  test_sonnylabs_security.py  test_watermark_config.py  test_watermark_text.py
