[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "EU_AI_ACT_MCP"
version = "0.1.0"
authors = [
  { name = "Liana" },
]
description = "EU_AI_ACT_MCP (Model Context Protocol) server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "fastmcp>=2.1.3",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "uvicorn>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.scripts]
eu_ai_act_mcp = "EU_AI_ACT_MCP.__main__:main.py"
