[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "eu_ai_act_mcp"
version = "0.1.0"
authors = [
  { name = "Liana" },
]
description = "EU_AI_ACT_MCP (Model Context Protocol) server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "fastmcp>=2.1.3",
  "requests>=2.31.0",
  "uvicorn>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["main", "server", "server_v2"]

[project.scripts]
eu-ai-act-mcp = "main:main"
