[project]
name = "eu_ai_act_crew"
version = "0.1.0"
description = "eu_ai_act_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.3.0",
]

[project.scripts]
eu_ai_act_crew = "eu_ai_act_crew.main:run"
run_crew = "eu_ai_act_crew.main:run"
train = "eu_ai_act_crew.main:train"
replay = "eu_ai_act_crew.main:replay"
test = "eu_ai_act_crew.main:test"
run_with_trigger = "eu_ai_act_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
